# ttt

./: .gitignore  .mega-linter.yml  Dockerfile  README.md  docker-compose.yml  encode-upload.sh  environment.yml  pyproject.toml  renovate.json  ttt.py
.github/workflows/: arm-publish.yml  codeql.yml  cpu-publish.yml  dependency-review.yml  docker-publish.yml  mega-linter.yml  notorch-publish.yml  ruff.yml  scorecard.yml  scorecards.yml  trivy.yml
whispercpp-docker/: Dockerfile  docker-compose.yml
