[project]
name = "ttt"
version = "0.1.0"
description = "Trunk To Text"
readme = "README.md"
requires-python = "=3.13"
dependencies = [
    "apprise>=1.9.3",
    "better-profanity>=0.7.0",
    "optimum[openvino]>=1.25.3",
    "torch>=2.7.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
